# golang-studies

./: .gitignore  README.md  docker-compose.yml
101/: conditionals.go  functions.go  go.mod  goroutine.go  loops.go  main.go  notes.md  slice_maps_structs.go  structs_interfaces.go  variables.go
101/module01/: conditionals.go  loops.go  main.go  slice_maps_structs.go  variables.go
algorithms/: bubble_sort.go
apps/backend/: .gitignore  main.py  pyproject.toml
apps/backend/app/config/: app_config.py
apps/backend/app/controllers/individual/: individual_controller.py
apps/backend/app/controllers/individual_type/: individual_type_controller.py
apps/backend/app/data/: data_load.py
apps/backend/app/data/individual/: __init__.py  load.py
apps/backend/app/data/individual_type/: __init__.py  load.py
apps/backend/app/database/: baseclass.py  session.py  utils.py
apps/backend/app/dto/: individual_model.py  individual_type_models.py
apps/backend/app/models/: __init__.py  mixins.py
apps/backend/app/models/individual/: __init__.py  basic.py  individual_type.py
apps/backend/app/queries/: __init__.py  individual_queries.py  individual_type_queries.py
apps/backend/app/routes/: router.py
apps/backend/app/routes/individual/: __init__.py
apps/backend/app/routes/individual_type/: __init__.py
apps/backend/app/utils/: breaker.py  recreate_and_load_db.py
apps/backend/tests/rest_services/: test_example.py
data_structures/: hash_table.go  main.go  queue.go  stack.go
data_structures/hash_table/: main.go
data_structures/queue/: main.go
generics/: main.go
(+2 files in other folders)
