[tool.poetry]
name = "inavoid"
version = "0.1.0"
description = ""
authors = ["Adryellsz <adryellpaulo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.15"
loguru = "^0.7.0"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
